--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,28 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+Pos=750,7
+Size=549,881
+Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1600,900
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=60,60
+Size=354,104
+Collapsed=0
+
+[Window][Example: Log]
+ViewportPos=1019,270
+ViewportId=0xBF126D42
+Size=546,439
+Collapsed=0
+
+[Window][start]
+Pos=53,102
+Size=373,275
 Collapsed=0
 
 [Docking][Data]
