--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=3289,223
+ViewportPos=1901,223
 ViewportId=0xE927CF2F
 Size=549,881
 Collapsed=0
@@ -35,8 +35,9 @@ Size=356,193
 Collapsed=0
 
 [Window][Advanced Light]
-Pos=60,60
-Size=211,160
+ViewportPos=8,247
+ViewportId=0xBF0D7C37
+Size=559,159
 Collapsed=0
 
 [Docking][Data]
