shadow map init

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -35,9 +35,8 @@ Size=356,193
 Collapsed=0
 
 [Window][Advanced Light]
-ViewportPos=8,247
-ViewportId=0xBF0D7C37
-Size=559,159
+Pos=191,20
+Size=559,192
 Collapsed=0
 
 [Docking][Data]
