fix depth textures

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -35,7 +35,8 @@ Size=356,193
 Collapsed=0
 
 [Window][Advanced Light]
-Pos=191,20
+ViewportPos=60,109
+ViewportId=0xBF0D7C37
 Size=559,192
 Collapsed=0
 
