--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=3501,182
+ViewportPos=1901,182
 ViewportId=0xE927CF2F
 Size=549,881
 Collapsed=0
@@ -38,6 +38,11 @@ Collapsed=0
 ViewportPos=236,468
 ViewportId=0xBF0D7C37
 Size=559,192
+Collapsed=0
+
+[Window][HDR]
+Pos=153,126
+Size=510,188
 Collapsed=0
 
 [Docking][Data]
